ECA-12455: apply review comments.